点击详情页面的按钮弹出对话框

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CrimeActivity" />
+        <!--<activity android:name=".CrimeActivity" />-->
+        <activity android:name=".CrimePagerActivity" />
 
     </application>
 
