--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <!--<activity android:name=".CrimeActivity" />-->
         <activity
             android:name=".CrimePagerActivity"
+            android:parentActivityName=".CrimeListActivity"
             android:label="@string/app_name" >
         </activity>
 
