--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,4 +29,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
                      android:maxSdkVersion="18"/>
 
+    <uses-feature android:name="android.hardware.Camera"
+                  android:required="false" />
+
 </manifest>
